[gd_scene load_steps=5 format=3 uid="uid://nnqg7i7w47a3"]

[ext_resource type="PackedScene" uid="uid://falxhbcpxjst" path="res://wall.tscn" id="1_i6oxo"]
[ext_resource type="Script" path="res://main.gd" id="1_ogkxh"]
[ext_resource type="PackedScene" uid="uid://bpao0e3xysafo" path="res://player.tscn" id="2_cq8w6"]

[sub_resource type="Curve2D" id="Curve2D_vbial"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -136, -112, 0, 0, 0, 0, 1296, -112, 0, 0, 0, 0, 1296, 752, 0, 0, 0, 0, 1208, 752, 0, 0, 0, 0, 1208, -80, 0, 0, 0, 0, 1104, -80, 0, 0, 0, 0, 1104, 752, 0, 0, 0, 0, 1056, 752, 0, 0, 0, 0, 1056, 64, 0, 0, 0, 0, 984, 64, 0, 0, 0, 0, 984, 752, 0, 0, 0, 0, 384, 752, 0, 0, 0, 0, 384, 576, 0, 0, 0, 0, 512, 576, 0, 0, 0, 0, 512, 672, 0, 0, 0, 0, 880, 672, 0, 0, 0, 0, 880, 616, 0, 0, 0, 0, 576, 616, 0, 0, 0, 0, 576, 560, 0, 0, 0, 0, 832, 560, 0, 0, 0, 0, 832, 192, 0, 0, 0, 0, 912, 192, 0, 0, 0, 0, 912, 152, 0, 0, 0, 0, 832, 152, 0, 0, 0, 0, 832, -16, 0, 0, 0, 0, 1056, -16, 0, 0, 0, 0, 1056, -80, 0, 0, 0, 0, -136, -80, 0, 0, 0, 0, -136, 752, 0, 0, 0, 0, 320, 752, 0, 0, 0, 0, 320, 384, 0, 0, 0, 0, 192, 384, 0, 0, 0, 0, 192, 544, 0, 0, 0, 0, 208, 576, 0, 0, 0, 0, 208, 672, 0, 0, 0, 0, -40, 680, 0, 0, 0, 0, 48, 624, 0, 0, 0, 0, 48, 544, 0, 0, 0, 0, 128, 536, 0, 0, 0, 0, 144, 400, 0, 0, 0, 0, -16, 360, 0, 0, 0, 0, -24, 280, 0, 0, 0, 0, 112, 336, 0, 0, 0, 0, 200, 264, 0, 0, 0, 0, 200, 176, 0, 0, 0, 0, 88, 208, 0, 0, 0, 0, 16, 144, 0, 0, 0, 0, -112, 136, 0, 0, 0, 0, -104, 48, 0, 0, 0, 0, 64, 64, 0, 0, 0, 0, 112, 96, 0, 0, 0, 0, 192, 32, 0, 0, 0, 0, 272, -16, 0, 0, 0, 0, 384, 16, 0, 0, 0, 0, 552, -24, 0, 0, 0, 0, 664, -56, 0, 0, 0, 0, 776, -40, 0, 0, 0, 0, 776, 64, 0, 0, 0, 0, 464, 104, 0, 0, 0, 0, 320, 80, 0, 0, 0, 0, 320, 384)
}
point_count = 61

[node name="Main" type="Node2D"]
script = ExtResource("1_ogkxh")

[node name="Wall" parent="." instance=ExtResource("1_i6oxo")]
layer_0/tile_data = PackedInt32Array(458749, 0, 2, 1245181, 0, 2, 1310717, 65536, 1, 1376253, 0, 1, -65538, 65536, 0, 458750, 131072, 1, 1245182, 131072, 1, -65537, 131072, 1, 458751, 131072, 0, 1048575, 0, 0, 1114111, 65536, 1, 1179647, 65536, 1, 1245183, 65536, 3, -131072, 131072, 1, -131071, 131072, 1, -131070, 131072, 1, -131069, 131072, 1, 1441795, 131072, 1, -131068, 131072, 1, 1179652, 131072, 1, 1441796, 131072, 1, -131067, 131072, 1, 1179653, 131072, 0, 1441797, 131072, 1, -131066, 131072, 1, 1441798, 131072, 1, -131065, 131072, 1, 851975, 0, 0, 917511, 65536, 1, 983047, 65536, 1, 1048583, 65536, 1, 1114119, 65536, 1, 1179655, 65536, 1, 1245191, 65536, 1, 1310727, 65536, 1, 1376263, 65536, 1, 1441799, 65536, 3, -131064, 131072, 1, 8, 0, 0, 65544, 65536, 1, 131080, 65536, 1, 196616, 65536, 1, 262152, 65536, 1, 327688, 65536, 1, 393224, 65536, 1, 458760, 65536, 1, 524296, 0, 1, -131063, 131072, 1, -131062, 131072, 1, -131061, 131072, 0, 327692, 0, 2, 393228, 65536, 1, 458764, 65536, 1, 524300, 0, 1, 786444, 0, 0, 851980, 65536, 1, 917516, 65536, 1, 983052, 0, 3, 327693, 131072, 1, 983053, 131072, 1, 1245197, 0, 0, 1310733, 65536, 1, 1376269, 65536, 1, 1441805, 0, 3, 327694, 131072, 1, 983054, 131072, 1, 1441806, 131072, 1, 327695, 131072, 1, 983055, 131072, 1, 1441807, 131072, 1, 327696, 131072, 0, 983056, 131072, 0, 1441808, 131072, 1, 1441809, 131072, 1, 1441810, 131072, 1, 1441811, 131072, 1, 327700, 65536, 0, 983060, 65536, 0, 1441812, 131072, 1, 327701, 131072, 1, 983061, 131072, 1, 1441813, 131072, 1, 327702, 131072, 1, 983062, 131072, 1, 1441814, 131072, 1, 327703, 131072, 1, 983063, 131072, 1, 1441815, 131072, 1, 327704, 65536, 2, 393240, 65536, 1, 458776, 65536, 1, 524312, 0, 1, 851992, 65536, 1, 917528, 65536, 1, 983064, 65536, 3, 1441816, 131072, 1, 1441817, 131072, 1, -131037, 0, 0, -65501, 65536, 1, 35, 65536, 1, 65571, 65536, 1, 131107, 65536, 1, 196643, 65536, 1, 262179, 65536, 1, 327715, 65536, 1, 393251, 0, 1, 917539, 0, 0, 983075, 65536, 1, 1048611, 65536, 1, 1114147, 65536, 1, 1179683, 65536, 1, 1245219, 65536, 1, 1310755, 65536, 1, 1376291, 65536, 1, 1441827, 0, 1, 262183, 0, 0, 327719, 65536, 1, 393255, 65536, 1, 458791, 65536, 1, 524327, 65536, 1, 589863, 65536, 1, 655399, 65536, 1, 720935, 65536, 1, 786471, 65536, 1, 852007, 0, 1, -65542, 65536, 4, -6, 65536, 4, 65530, 65536, 4, 131066, 65536, 4, 196602, 65536, 4, 262138, 65536, 4, 327674, 65536, 4, 393210, 65536, 4, 458746, 65536, 4, 524282, 65536, 4, 589818, 65536, 4, 655354, 65536, 4, 720890, 65536, 4, 786426, 65536, 4, 851962, 65536, 4, 917498, 65536, 4, 983034, 65536, 4, 1048570, 65536, 4, 1114106, 65536, 4, 1179642, 65536, 4, 1245178, 65536, 4, 1310714, 65536, 4, 1376250, 65536, 4, 1441786, 65536, 4, 1507322, 65536, 4, 1572858, 65536, 4, 1507369, 0, 4, 1441833, 0, 4, 1376297, 0, 4, 1310761, 0, 4, 1245225, 0, 4, 1179689, 0, 4, 1114153, 0, 4, 1048617, 0, 4, 983081, 0, 4, 917545, 0, 4, 852009, 0, 4, 786473, 0, 4, 720937, 0, 4, 655401, 0, 4, 589865, 0, 4, 524329, 0, 4, 458793, 0, 4, 393257, 0, 4, 327721, 0, 4, 262185, 0, 4, 196649, 0, 4, 131113, 0, 4, 65577, 0, 4, 41, 0, 4, -65495, 0, 4, -131031, 0, 4, -196567, 0, 4, -262103, 0, 4, -262149, 131072, 4, -262148, 131072, 4, -262147, 131072, 4, -262146, 131072, 4, -262145, 131072, 4, -327680, 131072, 4, -327679, 131072, 4, -327678, 131072, 4, -327677, 131072, 4, -327676, 131072, 4, -327675, 131072, 4, -327674, 131072, 4, -327673, 131072, 4, -327672, 131072, 4, -327671, 131072, 4, -327670, 131072, 4, -327669, 131072, 4, -327668, 131072, 4, -327667, 131072, 4, -327666, 131072, 4, -327665, 131072, 4, -327664, 131072, 4, -327663, 131072, 4, -327662, 131072, 4, -327661, 131072, 4, -327660, 131072, 4, -327659, 131072, 4, -327658, 131072, 4, -327657, 131072, 4, -327656, 131072, 4, -327655, 131072, 4, -327654, 131072, 4, -327653, 131072, 4, -327652, 131072, 4, -327651, 131072, 4, -327650, 131072, 4, -327649, 131072, 4, -327648, 131072, 4, -327647, 131072, 4, -327646, 131072, 4, -327645, 131072, 4, -327644, 131072, 4, -327643, 131072, 4, -327642, 131072, 4, -327641, 131072, 4, -327640, 131072, 4, 1638395, 131072, 3, 1638396, 131072, 3, 1638397, 131072, 3, 1638398, 131072, 3, 1638399, 131072, 3, 1572864, 131072, 3, 1572865, 131072, 3, 1572866, 131072, 3, 1572867, 131072, 3, 1572868, 131072, 3, 1572869, 131072, 3, 1572870, 131072, 3, 1572871, 131072, 3, 1572872, 131072, 3, 1572873, 131072, 3, 1572874, 131072, 3, 1572875, 131072, 3, 1572876, 131072, 3, 1572877, 131072, 3, 1572878, 131072, 3, 1572879, 131072, 3, 1572880, 131072, 3, 1572881, 131072, 3, 1572882, 131072, 3, 1572883, 131072, 3, 1572884, 131072, 3, 1572885, 131072, 3, 1572886, 131072, 3, 1572887, 131072, 3, 1572888, 131072, 3, 1572889, 131072, 3, 1572890, 131072, 3, 1572891, 131072, 3, 1572892, 131072, 3, 1572893, 131072, 3, 1572894, 131072, 3, 1572895, 131072, 3, 1572896, 131072, 3, 1572897, 131072, 3, 1572898, 131072, 3, 1572899, 131072, 3, 1572900, 131072, 3, 1572901, 131072, 3, 1572902, 131072, 3, 1572903, 131072, 3, 1572904, 131072, 3, 1572905, 327680, 6, 1638394, 393216, 6, -262150, 262144, 6, -327639, 262144, 5, 655387, 0, 0, 720923, 65536, 1, 786459, 65536, 1, 851995, 65536, 1, 917531, 65536, 1, 983067, 65536, 1, 1048603, 65536, 1, 1114139, 0, 1, 524285, 65536, 1, 589821, 65536, 1, 655357, 65536, 1, 720893, 65536, 1, 786429, 65536, 1, 851965, 0, 1, 1441818, 131072, 0, 1441794, 65536, 0, 655390, 65536, 0, 655394, 131072, 0, 655391, 131072, 1, 655392, 131072, 1, 655393, 131072, 1, -196614, 65536, 4, -131078, 65536, 4, 786456, 0, 0, -196613, 0, 6, -131077, 0, 6, -65541, 196608, 0, -5, 0, 6, 65531, 0, 6, 131067, 0, 6, 196603, 0, 6, 262139, 196608, 0, 327675, 196608, 0, 393211, 196608, 0, 458747, 0, 6, 524283, 0, 6, 589819, 196608, 0, 655355, 196608, 0, 720891, 0, 6, 786427, 196608, 0, 851963, 0, 6, 917499, 196608, 0, 983035, 196608, 0, 1048571, 0, 6, 1114107, 196608, 0, 1179643, 0, 6, 1245179, 0, 6, 1310715, 196608, 0, 1376251, 196608, 0, 1441787, 196608, 0, 1507323, 196608, 0, 1572859, 196608, 0, -196612, 196608, 0, -131076, 0, 6, -65540, 196608, 0, -4, 0, 6, 65532, 0, 6, 131068, 196608, 0, 196604, 196608, 0, 262140, 0, 6, 327676, 0, 6, 393212, 0, 6, 458748, 0, 6, 524284, 196608, 0, 589820, 196608, 0, 655356, 196608, 0, 720892, 196608, 0, 786428, 0, 6, 851964, 196608, 0, 917500, 0, 6, 983036, 196608, 0, 1048572, 0, 6, 1114108, 0, 6, 1179644, 196608, 0, 1245180, 196608, 0, 1310716, 0, 6, 1376252, 0, 6, 1441788, 0, 6, 1507324, 196608, 0, 1572860, 196608, 0, 1441789, 196608, 0, 1507325, 196608, 0, 1572861, 0, 6, 1441790, 196608, 0, 1507326, 0, 6, 1572862, 0, 6, 1441791, 196608, 0, 1507327, 0, 6, 1572863, 0, 6, 1376256, 0, 6, 1441792, 0, 6, 1507328, 196608, 0, 1376257, 196608, 0, 1441793, 196608, 0, 1507329, 0, 6, 1310718, 0, 6, 1376254, 0, 6, 1310719, 196608, 0, 1376255, 196608, 0, 1245184, 0, 6, 1310720, 0, 6, 1245185, 0, 6, 1310721, 0, 6, 1245186, 196608, 0, 1310722, 0, 6, 1245187, 196608, 0, 1310723, 196608, 0, 1245188, 0, 6, 1310724, 196608, 0, 1245189, 196608, 0, 1310725, 196608, 0, 1245190, 196608, 0, 1310726, 196608, 0, 1376258, 196608, 0, 1376259, 196608, 0, 1376260, 196608, 0, 1376261, 0, 6, 1376262, 0, 6, 1507330, 0, 6, 1507331, 196608, 0, 1507332, 196608, 0, 1507333, 0, 6, 1507334, 196608, 0, 1507335, 0, 6, 1507336, 196608, 0, 1507337, 0, 6, 1507338, 0, 6, 1507339, 196608, 0, 1507340, 0, 6, 1507341, 0, 6, 1507342, 0, 6, 1507343, 0, 6, 1507344, 196608, 0, 1507345, 196608, 0, 1507346, 196608, 0, 1507347, 0, 6, 1507348, 0, 6, 1507349, 196608, 0, 1507350, 196608, 0, 1507351, 196608, 0, 1507352, 196608, 0, 1507353, 0, 6, 1507354, 0, 6, 1507355, 196608, 0, 1507356, 0, 6, 1507357, 196608, 0, 1507358, 196608, 0, 1507359, 196608, 0, 1507360, 196608, 0, 1507361, 0, 6, 1507362, 0, 6, 1507363, 0, 6, 1507364, 196608, 0, 1507365, 196608, 0, 1507366, 196608, 0, 1507367, 196608, 0, 1507368, 196608, 0, -262104, 196608, 0, -196568, 0, 6, -131032, 196608, 0, -65496, 196608, 0, 40, 0, 6, 65576, 196608, 0, 131112, 0, 6, 196648, 0, 6, 262184, 196608, 0, 327720, 0, 6, 393256, 196608, 0, 458792, 196608, 0, 524328, 196608, 0, 589864, 196608, 0, 655400, 0, 6, 720936, 0, 6, 786472, 196608, 0, 852008, 196608, 0, 917544, 0, 6, 983080, 0, 6, 1048616, 196608, 0, 1114152, 196608, 0, 1179688, 0, 6, 1245224, 196608, 0, 1310760, 196608, 0, 1376296, 196608, 0, 1441832, 196608, 0, 917540, 196608, 0, 983076, 196608, 0, 1048612, 196608, 0, 1114148, 196608, 0, 1179684, 0, 6, 1245220, 0, 6, 1310756, 196608, 0, 1376292, 196608, 0, 1441828, 196608, 0, 917541, 0, 6, 983077, 196608, 0, 1048613, 196608, 0, 1114149, 0, 6, 1179685, 196608, 0, 1245221, 196608, 0, 1310757, 196608, 0, 1376293, 196608, 0, 1441829, 0, 6, 917542, 0, 6, 983078, 196608, 0, 1048614, 196608, 0, 1114150, 0, 6, 1179686, 0, 6, 1245222, 0, 6, 1310758, 0, 6, 1376294, 0, 6, 1441830, 0, 6, 917543, 0, 6, 983079, 0, 6, 1048615, 196608, 0, 1114151, 0, 6, 1179687, 0, 6, 1245223, 196608, 0, 1310759, 0, 6, 1376295, 196608, 0, 1441831, 0, 6, -262108, 0, 6, -196572, 196608, 0, -131036, 196608, 0, -65500, 196608, 0, 36, 0, 6, 65572, 196608, 0, 131108, 196608, 0, 196644, 196608, 0, 262180, 196608, 0, 327716, 0, 6, 393252, 0, 6, 458788, 0, 6, 524324, 0, 6, 589860, 0, 6, 655396, 0, 6, 720932, 0, 6, 786468, 0, 6, 852004, 0, 6, -262107, 0, 6, -196571, 196608, 0, -131035, 0, 6, -65499, 196608, 0, 37, 0, 6, 65573, 0, 6, 131109, 196608, 0, 196645, 196608, 0, 262181, 196608, 0, 327717, 196608, 0, 393253, 196608, 0, 458789, 196608, 0, 524325, 0, 6, 589861, 0, 6, 655397, 0, 6, 720933, 0, 6, 786469, 0, 6, 852005, 0, 6, -262106, 0, 6, -196570, 196608, 0, -65498, 0, 6, 38, 196608, 0, 65574, 0, 6, 131110, 196608, 0, 196646, 0, 6, 262182, 196608, 0, 327718, 196608, 0, 393254, 0, 6, 458790, 0, 6, 524326, 0, 6, 589862, 196608, 0, 655398, 196608, 0, 720934, 0, 6, 786470, 196608, 0, 852006, 196608, 0, -262105, 0, 6, -196569, 196608, 0, -131033, 196608, 0, -65497, 0, 6, 39, 0, 6, 65575, 196608, 0, 131111, 0, 6, -131034, 196608, 0, 196647, 196608, 0, -196611, 0, 6, -131075, 0, 6, -196610, 196608, 0, -131074, 196608, 0, -196609, 196608, 0, -131073, 196608, 0, -262144, 0, 6, -196608, 196608, 0, -262143, 196608, 0, -196607, 196608, 0, -262142, 196608, 0, -196606, 196608, 0, -262141, 0, 6, -196605, 0, 6, -262140, 0, 6, -196604, 0, 6, -262139, 0, 6, -196603, 0, 6, -262138, 196608, 0, -196602, 196608, 0, -262137, 196608, 0, -196601, 196608, 0, -262136, 196608, 0, -196600, 0, 6, -262135, 0, 6, -196599, 196608, 0, -262134, 0, 6, -196598, 0, 6, -262133, 196608, 0, -196597, 0, 6, -262132, 196608, 0, -196596, 196608, 0, -262131, 0, 6, -196595, 196608, 0, -262130, 0, 6, -196594, 0, 6, -262129, 196608, 0, -196593, 0, 6, -262128, 196608, 0, -196592, 0, 6, -262127, 196608, 0, -196591, 0, 6, -262126, 196608, 0, -196590, 0, 6, -262125, 196608, 0, -196589, 196608, 0, -262124, 0, 6, -196588, 196608, 0, -262123, 0, 6, -196587, 196608, 0, -196586, 0, 6, -262121, 196608, 0, -196585, 0, 6, -262120, 196608, 0, -196584, 196608, 0, -262119, 196608, 0, -196583, 0, 6, -262118, 0, 6, -196582, 196608, 0, -262117, 0, 6, -196581, 196608, 0, -262116, 0, 6, -196580, 196608, 0, -262115, 0, 6, -196579, 196608, 0, -262114, 0, 6, -196578, 196608, 0, -262113, 0, 6, -196577, 0, 6, -262112, 196608, 0, -196576, 0, 6, -262111, 196608, 0, -196575, 196608, 0, -262110, 196608, 0, -196574, 196608, 0, -262109, 196608, 0, -196573, 196608, 0, -65539, 196608, 0, -3, 0, 6, 65533, 0, 6, 131069, 196608, 0, 196605, 0, 6, 262141, 196608, 0, 327677, 0, 6, 393213, 0, 6, -262122, 196608, 0, -2, 196608, 0, 65534, 196608, 0, 131070, 196608, 0, 196606, 196608, 0, 262142, 0, 6, 327678, 0, 6, 393214, 196608, 0, -1, 0, 6, 65535, 196608, 0, 131071, 196608, 0, 196607, 196608, 0, 262143, 196608, 0, 327679, 196608, 0, 393215, 196608, 0, -65536, 0, 6, 0, 196608, 0, 65536, 0, 6, 131072, 196608, 0, 196608, 196608, 0, 262144, 196608, 0, 327680, 0, 6, -65535, 196608, 0, 1, 0, 6, 65537, 196608, 0, 131073, 196608, 0, 196609, 0, 6, 262145, 0, 6, 327681, 196608, 0, -65534, 196608, 0, 2, 196608, 0, 65538, 0, 6, 131074, 196608, 0, 196610, 0, 6, 262146, 0, 6, 327682, 0, 6, -65533, 196608, 0, 3, 196608, 0, 65539, 196608, 0, 131075, 196608, 0, 196611, 196608, 0, 262147, 196608, 0, 327683, 0, 6, -65532, 196608, 0, 4, 196608, 0, 65540, 0, 6, 131076, 196608, 0, 196612, 196608, 0, 262148, 0, 6, 327684, 0, 6, -65531, 196608, 0, 5, 196608, 0, 65541, 196608, 0, 131077, 0, 6, 196613, 196608, 0, 262149, 0, 6, 327685, 0, 6, -65530, 196608, 0, 6, 0, 6, 65542, 196608, 0, 131078, 196608, 0, 196614, 196608, 0, 262150, 196608, 0, 327686, 196608, 0, -65529, 0, 6, 7, 196608, 0, 65543, 0, 6, 131079, 196608, 0, 196615, 0, 6, 262151, 0, 6, 327687, 0, 6, -65528, 0, 6, -65527, 196608, 0, -65526, 0, 6, -65525, 0, 6, -65524, 196608, 0, -65523, 196608, 0, -65522, 196608, 0, -65521, 196608, 0, -65520, 196608, 0, -65519, 0, 6, -65518, 0, 6, -65517, 0, 6, -65516, 196608, 0, -65515, 196608, 0, -65514, 196608, 0, -65513, 196608, 0, -65512, 0, 6, -65511, 0, 6, -65510, 196608, 0, -65509, 196608, 0, -65508, 0, 6, -65507, 196608, 0, -65506, 0, 6, -65505, 0, 6, -65504, 196608, 0, -65503, 196608, 0, -65502, 0, 6, -131060, 0, 6, 12, 196608, 0, 65548, 196608, 0, 131084, 0, 6, 196620, 0, 6, 262156, 0, 6, -131059, 0, 6, 13, 0, 6, 65549, 196608, 0, 131085, 196608, 0, 196621, 0, 6, 262157, 0, 6, -131058, 196608, 0, 14, 196608, 0, 65550, 196608, 0, 131086, 196608, 0, 196622, 0, 6, 262158, 196608, 0, -131057, 196608, 0, 15, 0, 6, 65551, 0, 6, 131087, 196608, 0, 196623, 0, 6, 262159, 0, 6, -131056, 0, 6, 16, 0, 6, 65552, 196608, 0, 131088, 0, 6, 196624, 196608, 0, 262160, 196608, 0, -131055, 0, 6, 17, 0, 6, 65553, 0, 6, 131089, 196608, 0, 196625, 196608, 0, 262161, 196608, 0, -131054, 0, 6, 18, 196608, 0, 65554, 196608, 0, 131090, 196608, 0, 196626, 0, 6, 262162, 196608, 0, -131053, 196608, 0, 19, 0, 6, 65555, 196608, 0, 131091, 196608, 0, 196627, 196608, 0, 262163, 0, 6, -131052, 196608, 0, 20, 0, 6, 65556, 0, 6, 131092, 0, 6, 196628, 0, 6, 262164, 0, 6, -131051, 0, 6, 21, 196608, 0, 65557, 0, 6, 131093, 196608, 0, 196629, 196608, 0, 262165, 0, 6, -131050, 0, 6, 22, 0, 6, 65558, 0, 6, 131094, 0, 6, 196630, 0, 6, 262166, 196608, 0, -131049, 0, 6, 23, 196608, 0, 65559, 0, 6, 131095, 0, 6, 196631, 0, 6, 262167, 196608, 0, -131048, 196608, 0, 24, 196608, 0, 65560, 0, 6, 131096, 196608, 0, 196632, 0, 6, 262168, 196608, 0, -131047, 0, 6, 25, 0, 6, 65561, 196608, 0, 131097, 196608, 0, 196633, 0, 6, 262169, 0, 6, -131046, 196608, 0, 26, 196608, 0, 65562, 196608, 0, 131098, 0, 6, 196634, 0, 6, 262170, 0, 6, -131045, 196608, 0, 27, 196608, 0, 65563, 196608, 0, 131099, 0, 6, 196635, 196608, 0, 262171, 0, 6, -131044, 0, 6, 65564, 0, 6, 131100, 0, 6, 196636, 0, 6, 262172, 196608, 0, -131043, 196608, 0, 29, 0, 6, 65565, 0, 6, 131101, 0, 6, 196637, 196608, 0, 262173, 0, 6, -131042, 0, 6, 30, 196608, 0, 65566, 196608, 0, 131102, 196608, 0, 262174, 0, 6, -131041, 196608, 0, 31, 0, 6, 65567, 196608, 0, 131103, 0, 6, 196639, 196608, 0, 262175, 0, 6, -131040, 196608, 0, 32, 196608, 0, 65568, 0, 6, 131104, 196608, 0, 196640, 196608, 0, 262176, 196608, 0, 33, 0, 6, 65569, 0, 6, 131105, 196608, 0, 196641, 196608, 0, 262177, 0, 6, -131038, 196608, 0, 34, 0, 6, 65570, 0, 6, 131106, 0, 6, 196642, 0, 6, 262178, 196608, 0, 327705, 196608, 0, 393241, 0, 6, 458777, 196608, 0, 524313, 196608, 0, 589849, 196608, 0, 327706, 196608, 0, 393242, 196608, 0, 458778, 196608, 0, 524314, 0, 6, 589850, 196608, 0, 327707, 0, 6, 393243, 0, 6, 458779, 196608, 0, 524315, 0, 6, 589851, 0, 6, 28, 196608, 0, 327708, 0, 6, 393244, 0, 6, 458780, 196608, 0, 524316, 196608, 0, 589852, 196608, 0, 327709, 196608, 0, 393245, 196608, 0, 458781, 196608, 0, 524317, 0, 6, 589853, 0, 6, 196638, 0, 6, 327710, 0, 6, 393246, 196608, 0, 458782, 0, 6, 524318, 0, 6, 589854, 0, 6, 327711, 196608, 0, 393247, 196608, 0, 458783, 0, 6, 589855, 0, 6, 327712, 0, 6, 393248, 196608, 0, 458784, 196608, 0, 524320, 196608, 0, 589856, 196608, 0, -131039, 196608, 0, 327713, 196608, 0, 393249, 0, 6, 458785, 0, 6, 524321, 196608, 0, 589857, 196608, 0, 327714, 0, 6, 393250, 0, 6, 458786, 196608, 0, 524322, 0, 6, 589858, 196608, 0, 524319, 0, 6, 458787, 196608, 0, 524323, 0, 6, 589859, 196608, 0, 655395, 196608, 0, 720931, 0, 6, 786467, 196608, 0, 852003, 0, 6, 720924, 0, 6, 786460, 196608, 0, 851996, 196608, 0, 917532, 0, 6, 983068, 196608, 0, 1048604, 0, 6, 1114140, 196608, 0, 1179676, 0, 6, 1245212, 0, 6, 1310748, 196608, 0, 1376284, 196608, 0, 1441820, 0, 6, 720925, 0, 6, 786461, 196608, 0, 851997, 0, 6, 917533, 196608, 0, 983069, 196608, 0, 1048605, 0, 6, 1114141, 0, 6, 1179677, 196608, 0, 1245213, 0, 6, 1310749, 0, 6, 1376285, 196608, 0, 1441821, 196608, 0, 720926, 0, 6, 786462, 196608, 0, 851998, 196608, 0, 917534, 0, 6, 983070, 196608, 0, 1048606, 196608, 0, 1114142, 0, 6, 1179678, 196608, 0, 1245214, 196608, 0, 1310750, 0, 6, 1376286, 196608, 0, 1441822, 196608, 0, 720927, 0, 6, 786463, 196608, 0, 851999, 196608, 0, 917535, 0, 6, 983071, 196608, 0, 1048607, 0, 6, 1114143, 196608, 0, 1179679, 196608, 0, 1245215, 196608, 0, 1310751, 0, 6, 1376287, 0, 6, 1441823, 0, 6, 720928, 196608, 0, 786464, 0, 6, 852000, 196608, 0, 917536, 196608, 0, 983072, 0, 6, 1048608, 0, 6, 1114144, 0, 6, 1179680, 0, 6, 1245216, 196608, 0, 1310752, 196608, 0, 1376288, 196608, 0, 1441824, 0, 6, 720929, 0, 6, 786465, 0, 6, 852001, 0, 6, 917537, 196608, 0, 983073, 0, 6, 1048609, 196608, 0, 1114145, 196608, 0, 1179681, 0, 6, 1245217, 196608, 0, 1310753, 0, 6, 1376289, 0, 6, 1441825, 0, 6, 720930, 0, 6, 786466, 196608, 0, 852002, 0, 6, 917538, 0, 6, 983074, 0, 6, 1048610, 196608, 0, 1114146, 0, 6, 1179682, 0, 6, 1245218, 0, 6, 1310754, 196608, 0, 1376290, 0, 6, 1441826, 196608, 0, 655388, 0, 6, 655389, 196608, 0, 1179675, 0, 6, 1245211, 196608, 0, 1310747, 0, 6, 1376283, 0, 6, 1441819, 0, 6, 1179674, 0, 6, 1048590, 0, 6, 1114126, 0, 6, 1179662, 0, 6, 1245198, 0, 6, 1310734, 0, 6, 1376270, 0, 6, 1048591, 196608, 0, 1114127, 196608, 0, 1179663, 0, 6, 1245199, 196608, 0, 1310735, 0, 6, 1376271, 0, 6, 1048592, 0, 6, 1114128, 0, 6, 1179664, 196608, 0, 1245200, 196608, 0, 1310736, 196608, 0, 1376272, 196608, 0, 1048593, 196608, 0, 1114129, 0, 6, 1179665, 196608, 0, 1245201, 0, 6, 1310737, 0, 6, 1376273, 196608, 0, 1048594, 0, 6, 1114130, 0, 6, 1179666, 0, 6, 1245202, 0, 6, 1310738, 196608, 0, 1376274, 196608, 0, 1048595, 196608, 0, 1114131, 0, 6, 1179667, 196608, 0, 1245203, 0, 6, 1310739, 196608, 0, 1376275, 0, 6, 1048596, 196608, 0, 1114132, 0, 6, 1179668, 0, 6, 1245204, 196608, 0, 1310740, 196608, 0, 1376276, 196608, 0, 1048597, 196608, 0, 1114133, 0, 6, 1179669, 196608, 0, 1245205, 0, 6, 1310741, 0, 6, 1376277, 0, 6, 1048598, 0, 6, 1114134, 0, 6, 1179670, 196608, 0, 1245206, 0, 6, 1310742, 0, 6, 1376278, 196608, 0, 1048599, 0, 6, 1114135, 196608, 0, 1179671, 196608, 0, 1245207, 196608, 0, 1310743, 196608, 0, 1376279, 0, 6, 1048600, 196608, 0, 1114136, 196608, 0, 1179672, 196608, 0, 1245208, 0, 6, 1310744, 196608, 0, 1376280, 0, 6, 1048601, 0, 6, 1114137, 196608, 0, 1179673, 196608, 0, 1245209, 0, 6, 1310745, 196608, 0, 1376281, 196608, 0, 1048602, 0, 6, 1114138, 0, 6, 1245210, 196608, 0, 1310746, 196608, 0, 1376282, 0, 6, 9, 0, 6, 65545, 196608, 0, 131081, 0, 6, 196617, 0, 6, 262153, 0, 6, 327689, 0, 6, 393225, 0, 6, 458761, 0, 6, 524297, 196608, 0, 589833, 196608, 0, 655369, 0, 6, 720905, 196608, 0, 786441, 0, 6, 851977, 0, 6, 917513, 196608, 0, 983049, 0, 6, 1048585, 0, 6, 1114121, 196608, 0, 1179657, 0, 6, 1245193, 0, 6, 1310729, 0, 6, 1376265, 0, 6, 1441801, 196608, 0, 10, 0, 6, 65546, 196608, 0, 131082, 0, 6, 196618, 196608, 0, 262154, 0, 6, 327690, 196608, 0, 393226, 196608, 0, 458762, 196608, 0, 524298, 196608, 0, 589834, 0, 6, 655370, 0, 6, 720906, 196608, 0, 786442, 0, 6, 851978, 196608, 0, 917514, 0, 6, 983050, 0, 6, 1048586, 0, 6, 1114122, 196608, 0, 1179658, 196608, 0, 1245194, 196608, 0, 1310730, 196608, 0, 1376266, 196608, 0, 1441802, 0, 6, 11, 196608, 0, 65547, 0, 6, 131083, 0, 6, 196619, 196608, 0, 262155, 196608, 0, 327691, 0, 6, 393227, 196608, 0, 458763, 0, 6, 524299, 0, 6, 589835, 0, 6, 655371, 196608, 0, 720907, 196608, 0, 786443, 0, 6, 851979, 196608, 0, 917515, 196608, 0, 983051, 0, 6, 1048587, 0, 6, 1114123, 0, 6, 1179659, 0, 6, 1245195, 0, 6, 1310731, 196608, 0, 1376267, 196608, 0, 1441803, 196608, 0, 393216, 0, 6, 458752, 196608, 0, 524288, 0, 6, 589824, 196608, 0, 655360, 0, 6, 720896, 196608, 0, 786432, 0, 6, 851968, 0, 6, 917504, 196608, 0, 983040, 196608, 0, 1048576, 196608, 0, 1114112, 196608, 0, 393217, 196608, 0, 458753, 196608, 0, 524289, 0, 6, 589825, 0, 6, 655361, 0, 6, 720897, 196608, 0, 786433, 196608, 0, 851969, 0, 6, 917505, 0, 6, 983041, 0, 6, 1048577, 0, 6, 1114113, 196608, 0, 393218, 196608, 0, 458754, 196608, 0, 524290, 196608, 0, 589826, 0, 6, 655362, 196608, 0, 720898, 196608, 0, 786434, 196608, 0, 851970, 196608, 0, 917506, 0, 6, 983042, 196608, 0, 1048578, 196608, 0, 1114114, 196608, 0, 393219, 0, 6, 458755, 0, 6, 524291, 196608, 0, 589827, 0, 6, 655363, 0, 6, 720899, 196608, 0, 786435, 196608, 0, 851971, 196608, 0, 917507, 196608, 0, 983043, 0, 6, 1048579, 196608, 0, 1114115, 196608, 0, 393220, 196608, 0, 458756, 196608, 0, 524292, 196608, 0, 589828, 0, 6, 655364, 196608, 0, 720900, 196608, 0, 786436, 196608, 0, 851972, 196608, 0, 917508, 196608, 0, 983044, 196608, 0, 1048580, 0, 6, 1114116, 196608, 0, 393221, 196608, 0, 458757, 0, 6, 524293, 196608, 0, 589829, 0, 6, 655365, 196608, 0, 720901, 0, 6, 786437, 0, 6, 851973, 196608, 0, 917509, 0, 6, 983045, 0, 6, 1048581, 196608, 0, 1114117, 0, 6, 393222, 0, 6, 458758, 196608, 0, 524294, 196608, 0, 589830, 0, 6, 655366, 196608, 0, 720902, 196608, 0, 786438, 196608, 0, 851974, 0, 6, 917510, 0, 6, 983046, 196608, 0, 1048582, 196608, 0, 1114118, 196608, 0, 1179648, 196608, 0, 1179649, 0, 6, 1179650, 0, 6, 1179651, 196608, 0, 917501, 196608, 0, 983037, 0, 6, 1048573, 0, 6, 1114109, 196608, 0, 1179645, 196608, 0, 917502, 0, 6, 983038, 196608, 0, 1048574, 0, 6, 1114110, 0, 6, 1179646, 196608, 0, 524287, 196608, 0, 589823, 196608, 0, 655359, 196608, 0, 720895, 196608, 0, 786431, 196608, 0, 851967, 196608, 0, 917503, 0, 6, 983039, 0, 6, 524286, 0, 6, 589822, 0, 6, 655358, 0, 6, 720894, 0, 6, 786430, 196608, 0, 851966, 196608, 0, 393223, 0, 6, 458759, 0, 6, 524295, 0, 6, 589831, 0, 6, 655367, 196608, 0, 720903, 196608, 0, 786439, 196608, 0, 1179654, 0, 6, 589832, 196608, 0, 655368, 0, 6, 720904, 0, 6, 786440, 0, 6, 851976, 0, 6, 917512, 196608, 0, 983048, 0, 6, 1048584, 196608, 0, 1114120, 0, 6, 1179656, 0, 6, 1245192, 196608, 0, 1310728, 196608, 0, 1376264, 0, 6, 1441800, 0, 6, 1048589, 0, 6, 1114125, 196608, 0, 1179661, 196608, 0, 1048588, 196608, 0, 1114124, 0, 6, 1179660, 196608, 0, 1245196, 196608, 0, 1310732, 196608, 0, 1376268, 196608, 0, 1441804, 196608, 0, 589836, 196608, 0, 655372, 196608, 0, 720908, 196608, 0, 589837, 0, 6, 655373, 0, 6, 720909, 196608, 0, 589838, 196608, 0, 655374, 0, 6, 720910, 0, 6, 589839, 0, 6, 655375, 0, 6, 720911, 0, 6, 589840, 196608, 0, 655376, 196608, 0, 720912, 196608, 0, 589841, 196608, 0, 655377, 196608, 0, 720913, 196608, 0, 589842, 196608, 0, 655378, 0, 6, 720914, 0, 6, 589843, 196608, 0, 655379, 196608, 0, 720915, 0, 6, 589844, 0, 6, 655380, 196608, 0, 720916, 0, 6, 589845, 196608, 0, 655381, 0, 6, 720917, 0, 6, 589846, 0, 6, 655382, 196608, 0, 720918, 0, 6, 589847, 196608, 0, 655383, 196608, 0, 720919, 0, 6, 589848, 0, 6, 655384, 0, 6, 720920, 196608, 0, 327697, 0, 6, 393233, 0, 6, 458769, 0, 6, 524305, 196608, 0, 786449, 196608, 0, 851985, 196608, 0, 917521, 0, 6, 983057, 196608, 0, 327698, 196608, 0, 393234, 196608, 0, 458770, 196608, 0, 524306, 0, 6, 786450, 0, 6, 851986, 196608, 0, 917522, 0, 6, 983058, 196608, 0, 327699, 196608, 0, 393235, 196608, 0, 458771, 0, 6, 524307, 196608, 0, 786451, 0, 6, 851987, 0, 6, 917523, 196608, 0, 983059, 0, 6, 393229, 196608, 0, 458765, 196608, 0, 524301, 196608, 0, 786445, 0, 6, 851981, 0, 6, 917517, 0, 6, 393230, 196608, 0, 458766, 0, 6, 524302, 196608, 0, 786446, 0, 6, 851982, 196608, 0, 917518, 196608, 0, 393231, 0, 6, 458767, 0, 6, 524303, 196608, 0, 786447, 0, 6, 851983, 0, 6, 917519, 196608, 0, 393232, 0, 6, 458768, 196608, 0, 524304, 196608, 0, 786448, 0, 6, 851984, 196608, 0, 917520, 196608, 0, 393236, 0, 6, 458772, 0, 6, 524308, 196608, 0, 786452, 0, 6, 851988, 196608, 0, 917524, 196608, 0, 393237, 0, 6, 458773, 196608, 0, 524309, 0, 6, 786453, 0, 6, 851989, 0, 6, 917525, 0, 6, 393238, 196608, 0, 458774, 0, 6, 524310, 0, 6, 786454, 196608, 0, 851990, 196608, 0, 917526, 196608, 0, 393239, 0, 6, 458775, 196608, 0, 524311, 0, 6, 786455, 196608, 0, 851991, 0, 6, 917527, 196608, 0, 655385, 0, 6, 720921, 0, 6, 786457, 196608, 0, 851993, 0, 6, 917529, 0, 6, 983065, 196608, 0, 655386, 0, 6, 720922, 196608, 0, 786458, 0, 6, 851994, 0, 6, 917530, 196608, 0, 983066, 0, 6)

[node name="Player" parent="." instance=ExtResource("2_cq8w6")]
light_mask = 0
position = Vector2(589, 315)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackModeCooldown" type="Timer" parent="."]
one_shot = true

[node name="ToggleEnemySpawnCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnemyPath" type="Path2D" parent="."]
z_index = 1
curve = SubResource("Curve2D_vbial")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(-136, -112)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.172549, 0.172549, 0.172549, 0.705882)

[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_enemy_spawn_timer_timeout"]
